--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,34 +6,42 @@ on:
   pull_request:
     branches: [ main, master ]
 
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ["1.20", "1.21", "1.22"]
+        # Brug go.mod eller de to seneste Go-versioner
+        go-version: [ "1.24", "1.25" ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
+          # Alternativt: go-version-file: go.mod
           go-version: ${{ matrix.go-version }}
-          cache: 'go-mod'
+          check-latest: true
+          cache: true
 
       - name: Print go version
         run: go version
 
-      - name: Cache Go modules
+      # (Valgfrit) Ekstra build-cache – setup-go cacher allerede,
+      # men denne kan give lidt ekstra fart for build artifacts.
+      - name: Cache Go build cache
         uses: actions/cache@v4
         with:
           path: |
             ~/.cache/go-build
-            ${{ github.workspace }}/pkg/mod
-          key: ${{ runner.os }}-go-${{ matrix.go-version }}-${{ hashFiles('**/go.sum') }}
+          key: ${{ runner.os }}-gobuild-${{ matrix.go-version }}-${{ hashFiles('**/go.sum') }}
           restore-keys: |
-            ${{ runner.os }}-go-${{ matrix.go-version }}-
+            ${{ runner.os }}-gobuild-${{ matrix.go-version }}-
 
       - name: Download dependencies
         run: go mod download
@@ -42,15 +50,21 @@ jobs:
         run: go vet ./...
 
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v4
+        uses: golangci/golangci-lint-action@v8
         with:
-          version: v1.59.0
+          version: latest
           args: run ./...
 
       - name: Run tests
-        run: |
-          go test -v -race ./... -coverprofile=coverage.out
+        run: go test -v -race ./... -coverprofile=coverage.out
 
       - name: Show coverage summary
-        if: always() && exists('coverage.out')
+        if: ${{ always() && hashFiles('coverage.out') != '' }}
         run: go tool cover -func=coverage.out | sed -n '1,200p'
+
+      - name: Upload coverage (artifact)
+        if: ${{ hashFiles('coverage.out') != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-${{ matrix.go-version }}
+          path: coverage.out
