--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [ "1.24", "1.25" ]
+         go-version: [ "1.22.x", "1.23.x" ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
