--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # Brug go.mod eller de to seneste Go-versioner
-        go-version: [ "1.24", "1.25" ]
+        # Ændret til valid Go-versioner
+        go-version: [ "1.22.x", "1.23.x" ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -68,9 +68,3 @@ jobs:
         with:
           name: coverage-${{ matrix.go-version }}
           path: coverage.out
-          
-      - name: Run golangci-lint
-  uses: golangci/golangci-lint-action@v8
-  with:
-    version: latest
-    args: run ./...
