--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         uses: golangci/golangci-lint-action@v8
         with:
           version: latest
-          args: run ./...
+          args: ./...              
 
       - name: Run tests
         run: go test -v -race ./... -coverprofile=coverage.out
