--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,20 @@
-.git
-.gitignore
-**/.DS_Store
-**/node_modules
-**/bin
-**/obj
-**/*.log
+**/.git
+**/.gitignore
+**/.vs
+**/.vscode
+**/__pycache__
+*/.pyc
+*/.pyo
+*/.pyd
+*/.db
+*/.sqlite
+**/.venv
+**/venv
+**/env
+**/.mypy_cache
+**/.pytest_cache
+**/.coverage
+**/htmlcov
+**/logs
+**/secrets.dev.yaml
+**/values.dev.yaml
