--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,8 +70,9 @@ jobs:
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
+
   docker-build:
-    needs: [build, hadolint]
+    needs: [build, hadolint, healthz]
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -95,3 +96,43 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/whoknows-app:latest
+
+  healthz:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.25.x'
+          check-latest: true
+          cache: true
+
+      - name: Build server
+        run: go build ./cmd/server
+
+      - name: Start server
+        run: |
+          nohup go run ./cmd/server > app.log 2>&1 &
+          echo $! > app.pid
+          sleep 2   # give it a moment to boot
+
+      - name: Smoke test /healthz
+        run: scripts/smoke.sh
+
+      - name: Stop server & upload logs
+        if: always()
+        run: |
+          if [ -f app.pid ]; then kill "$(cat app.pid)" || true; fi
+          sleep 1
+        shell: bash
+
+      - name: Upload app.log
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-log
+          path: app.log
