--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,32 +71,6 @@ jobs:
         with:
           dockerfile: Dockerfile
 
-  docker-build:
-    needs: [build, hadolint, healthz]
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: |
-            ghcr.io/gitdengas123456/devops-valgfag:lates
-
   healthz:
     runs-on: ubuntu-latest
     needs: build
@@ -136,3 +110,44 @@ jobs:
         with:
           name: app-log
           path: app.log
+
+  migrations-check:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install sqlite3
+        run: sudo apt-get update && sudo apt-get install -y sqlite3
+
+      - name: Prepare fresh DB path
+        run: mkdir -p data/seed && : > data/seed/whoknows.db
+
+      - name: Run migration check
+        run: make migrate.check
+
+  docker-build:
+    needs: [build, hadolint, healthz, migrations-check]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: |
+            ghcr.io/gitdengas123456/devops-valgfag:latest
