--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   whoknows-app:
-    build: .
+    image: ghcr.io/gitdengas123456/devops-valgfag:latest
     container_name: whoknows-app
     ports:
       - "8080:8080"
