--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,23 @@ services:
       # Mount a local folder to persist database data
       - ./data:/app/data
     restart: unless-stopped
+
+     prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    depends_on:
+      - whoknows-app
+    restart: unless-stopped
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+    restart: unless-stopped
