--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,7 +163,7 @@ jobs:
   deploy:
     needs: docker-build
     runs-on: ubuntu-latest
-    environment: production
+    environment: produktion
 
     steps:
       - name: Checkout code
