--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,11 +11,15 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  # -------------------------
+  # Build + lint + tests
+  # -------------------------
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         go-version: [ "1.25.x" ]
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -42,7 +46,7 @@ jobs:
           version: latest
           args: ./...
 
-      - name: Run tests
+      - name: Run tests (race + coverage)
         run: |
           go test -v -race ./... \
             -coverpkg=./cmd/server,./handlers,./internal/db \
@@ -59,6 +63,9 @@ jobs:
           name: coverage-${{ matrix.go-version }}
           path: coverage.out
 
+  # -------------------------
+  # Dockerfile lint
+  # -------------------------
   hadolint:
     needs: build
     runs-on: ubuntu-latest
@@ -74,6 +81,9 @@ jobs:
         with:
           dockerfile: Dockerfile
 
+  # -------------------------
+  # Health / smoke test
+  # -------------------------
   healthz:
     runs-on: ubuntu-latest
     needs: build
@@ -114,6 +124,9 @@ jobs:
           name: app-log
           path: app.log
 
+  # -------------------------
+  # Migrations sanity-check
+  # -------------------------
   migrations-check:
     runs-on: ubuntu-latest
     needs: build
@@ -125,20 +138,17 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y sqlite3
 
       - name: Prepare fresh DB path
-        run: |
-          mkdir -p data/seed
-          : > data/seed/whoknows.db
+        run: mkdir -p data/seed
 
-      - name: Run migrations
-        env:
-          DATABASE_PATH: data/seed/whoknows.db
+      - name: Run migrations (apply)
         run: make migrate
 
-      - name: Run migration check
-        env:
-          DATABASE_PATH: data/seed/whoknows.db
+      - name: Run migration check (no pending)
         run: make migrate.check
 
+  # -------------------------
+  # Build & push Docker image (only on main)
+  # -------------------------
   docker-build:
     needs: [build, hadolint, healthz, migrations-check]
     runs-on: ubuntu-latest
@@ -146,6 +156,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -165,6 +176,9 @@ jobs:
           tags: |
             ghcr.io/gitdengas123456/devops-valgfag:latest
 
+  # -------------------------
+  # Deploy to VM (compose + migrate)
+  # -------------------------
   deploy:
     needs: docker-build
     runs-on: ubuntu-latest
@@ -172,16 +186,33 @@ jobs:
     if: github.ref == 'refs/heads/main'
 
     steps:
-      - name: Checkout code
+      - name: Checkout code (for reference, not strictly needed)
         uses: actions/checkout@v4
 
       - name: Deploy to VM via SSH
         uses: appleboy/ssh-action@v1.1.0
         with:
-          host: ${{ vars.PROD_SSH_HOST }}
-          username: ${{ vars.PROD_SSH_USER }}
-          key: ${{ secrets.PROD_SSH_KEY }}
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
           script: |
+            set -e
+
+            cd ~/DevOps-Valgfag
+
+            echo "Pull latest repo state..."
+            git pull origin main
+
+            echo "Run DB migrations on prod..."
+            make migrate
+            make migrate.check
+
+            echo "Pull latest app image..."
             docker pull ${{ vars.IMAGE }}
-            docker compose -f ~/DevOps-Valgfag/docker-compose.yml down || true
-            docker compose -f ~/DevOps-Valgfag/docker-compose.yml up -d
+
+            echo "Restart full compose stack..."
+            docker compose -f docker-compose.yml down || true
+            docker compose -f docker-compose.yml up -d
+
+            echo "Deployment finished."
