--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,21 @@ jobs:
   # -------------------------
   build:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: admin
+          POSTGRES_PASSWORD: admin123
+          POSTGRES_DB: whoknows
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U admin -d whoknows"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     strategy:
       matrix:
         go-version: [ "1.25.x" ]
@@ -46,7 +61,14 @@ jobs:
           version: latest
           args: ./...
 
+      - name: Run DB migrations (Postgres)
+        env:
+          DATABASE_URL: postgres://admin:admin123@localhost:5432/whoknows?sslmode=disable
+        run: make migrate
+
       - name: Run tests (race + coverage)
+        env:
+          DATABASE_URL: postgres://admin:admin123@localhost:5432/whoknows?sslmode=disable
         run: |
           go test -v -race ./... \
             -coverpkg=./cmd/server,./handlers,./internal/db \
@@ -69,9 +91,6 @@ jobs:
   hadolint:
     needs: build
     runs-on: ubuntu-latest
-    concurrency:
-      group: ci-lint-${{ github.ref }}
-      cancel-in-progress: true
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -102,6 +121,8 @@ jobs:
         run: go build ./cmd/server
 
       - name: Start server
+        env:
+          DATABASE_URL: postgres://admin:admin123@localhost:5432/whoknows?sslmode=disable
         run: |
           nohup go run ./cmd/server > app.log 2>&1 &
           echo $! > app.pid
@@ -115,7 +136,6 @@ jobs:
         run: |
           if [ -f app.pid ]; then kill "$(cat app.pid)" || true; fi
           sleep 1
-        shell: bash
 
       - name: Upload app.log
         if: always()
@@ -125,36 +145,10 @@ jobs:
           path: app.log
 
   # -------------------------
-  # Migrations sanity-check
-  # -------------------------
-  migrations-check:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install sqlite3
-        run: sudo apt-get update && sudo apt-get install -y sqlite3
-
-      - name: Prepare fresh DB path
-        run: mkdir -p data/seed
-
-      - name: Run migrations (apply)
-        env:
-          DATABASE_PATH: data/seed/whoknows.db
-        run: make migrate
-
-      - name: Run migration check (no pending)
-        env:
-          DATABASE_PATH: data/seed/whoknows.db
-        run: make migrate.check
-
-  # -------------------------
-  # Build & push Docker image (only on main)
+  # Build & push Docker image (main only)
   # -------------------------
   docker-build:
-    needs: [build, hadolint, healthz, migrations-check]
+    needs: [build, hadolint, healthz]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     permissions:
@@ -179,8 +173,9 @@ jobs:
           push: true
           tags: |
             ghcr.io/gitdengas123456/devops-valgfag:latest
+
   # -------------------------
-  # Deploy to VM (compose + migrate)
+  # Deploy to VM via SSH (compose + migrate)
   # -------------------------
   deploy:
     needs: docker-build
@@ -195,7 +190,6 @@ jobs:
       - name: Deploy to VM via SSH
         uses: appleboy/ssh-action@v1.1.0
         with:
-          # bruger environment-variabler fra miljøet "produktion"
           host: ${{ vars.PROD_SSH_HOST }}
           username: ${{ vars.PROD_SSH_USER }}
           key: ${{ secrets.PROD_SSH_KEY }}
@@ -209,21 +203,15 @@ jobs:
             git fetch origin main
             git reset --hard origin/main
 
-            echo "Ensure sqlite3 is installed..."
-            if ! command -v sqlite3 >/dev/null 2>&1; then
-              sudo apt-get update
-              sudo apt-get install -y sqlite3
-            fi
-
-            echo "Run DB migrations on prod..."
-            DATABASE_PATH=data/seed/whoknows.db make migrate
-            DATABASE_PATH=data/seed/whoknows.db make migrate.check
+            echo "Running Postgres migrations on production..."
+            DATABASE_URL=postgres://admin:admin123@postgres_db:5432/whoknows?sslmode=disable make migrate
+            DATABASE_URL=postgres://admin:admin123@postgres_db:5432/whoknows?sslmode=disable make migrate.check
 
             echo "Pull latest app image..."
             docker pull ${{ vars.IMAGE }}
 
-            echo "Restart compose stack..."
+            echo "Restart Docker Compose stack..."
             docker compose -f docker-compose.yml down || true
             docker compose -f docker-compose.yml up -d
 
-            echo "Deployment finished."
+            echo "Deployment complete."
