--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - PORT=8080
       - DATABASE_PATH=/app/data/seed/whoknows.db
       - SEED_ON_BOOT=1
+      - APP_ENV=prod
       - SEARCH_FTS=1
     volumes:
       - ./data:/app/data
