--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,10 +184,10 @@ jobs:
   # Deploy to VM (compose + migrate)
   # -------------------------
   deploy:
-    needs: docker-build 
+    needs: docker-build
     runs-on: ubuntu-latest
     environment: produktion
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout code (for reference)
