--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: Dockerfile
     image: devops-valgfag-app
     container_name: whoknows-app
+    env_file:
+      - .env
     ports:
       - "8080:8080"
     environment:
@@ -14,7 +16,11 @@ services:
       APP_ENV: prod
       # Set to 0 until Postgres FTS is implemented; set to 1 when tsvector-search is ready
       SEARCH_FTS: 0
-      DATABASE_URL: ${DATABASE_URL}
+      DB_HOST: postgres_db
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres_db:5432/${POSTGRES_DB}?sslmode=disable
       SESSION_KEY: ${SESSION_KEY}
       DMI_API_KEY: ${DMI_API_KEY}
     depends_on:
@@ -26,6 +32,8 @@ services:
     image: postgres:16
     container_name: postgres_db
     restart: unless-stopped
+    env_file:
+      - .env
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
