Set SESSION_KEY for CI server startup
Add SESSION_KEY environment variable for CI server.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,6 +143,7 @@ jobs:
       - name: Start server
         env:
           DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}?sslmode=disable
+          SESSION_KEY: "ci-test-session-key"
         run: |
           nohup ./server > app.log 2>&1 &
           echo $! > app.pid
